# src/backend/app/routes/ocels.py
@@ -11,7 +11,7 @@ from app.dependencies import ApiOcel, ApiSession
 from app.internal.exceptions import NotFound
 from app.internal.model.base import PaginatedResponse
 from app.internal.model.events import Date_Distribution_Item, Entity_Time_Info
-from app.internal.model.ocel import OCELFilter, OcelMetadata, TypedAttribute
+from app.internal.model.ocel import Attribute, OCELFilter, OcelMetadata, TypedAttribute
 from app.internal.model.response import TempFileResponse
 from app.internal.ocel.default_ocel import (
     DEFAULT_OCEL_KEYS,
@@ -145,6 +145,13 @@ def rename_ocel(ocel: ApiOcel, new_name: str):
 
 # endregion
 # region Info
+@ocels_router.get(
+    "/{ocel_id}/attributes", response_model=list[Attribute], operation_id="attributes"
+)
+def get_attributes(ocel: ApiOcel):
+    return Attribute.from_df(ocel.attributes.get_summary())
+
+
 @ocels_router.get(
     "/{ocel_id}/objects/attributes",
     response_model=list[TypedAttribute],
